Initial commit with css modules and typescirpt working

--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,13 @@
-.HeaderClass {
-    padding: '10px';
-    font-size: '1.3em';
-    background: '#ffffff';
-    display: 'inline-block';
+@import '../../style/common.css';
+
+:root {
+    --header-background-colour: #ffffff;
+}
+
+.Header {
+    composes: Container--Standard from '../../style/common.css';
+    padding: var(--base-pad);
+    background: var(--header-background-colour);
+    display: flex;
+    justify-content: space-evenly;
 }
