--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -4,10 +4,20 @@
     --header-background-colour: #ffffff;
 }
 
+@keyframes slideInFromLeft {
+    0% {
+      transform: translateX(-100%);
+    }
+    100% {
+      transform: translateX(0);
+    }
+}
+
 .Header {
     composes: Container--Standard from '../../style/common.css';
     padding: var(--base-pad);
     background: var(--header-background-colour);
     display: flex;
     justify-content: space-evenly;
+    animation: 10s ease-out 0s 10 slideInFromLeft;
 }
