--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -1,7 +1,64 @@
 @import '../../style/common.css';
 
-.HeaderClass {
-    padding: var(--base-pad);
-    background: var(--base-colour);
+:root {
+    --header-top: 8rem;
+    --header-inverse-top: -7.5rem;
+}
+
+.Header {
+    margin-top: 90px;
+    text-align: center;
+    margin-right: 1.5rem;
+    margin-left: 1.5rem;
+}
+
+.Header--Photo {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    overflow: hidden;
+    padding: 5px;
+    background: #ededed;
+    display: inline-block;
+    margin-top: -80px;
+}
+
+.Header--Photo img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
+.Text--Header h1 {
+    margin: 0;
+    padding: 0;
+    font-size: 2.4em;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+}
+
+.Text-header h1::first-line {
+    font-size: 1.5em;
+    letter-spacing: -4px;
+    font-weight: 800;
+    line-height: 1.5em;
+}
+
+.Header--Text h1 span {
+    color: #F0563D;
+}
+
+.Header--Text h1 sup {
+    opacity: 0.5;
+}
+
+.Header--Text:after {
+    width: 100%;
+    height: 0.3rem;
+    background: #ddd;
+    opacity: 0.5;
+    margin-top: 1.5rem;
+    content: '';
     display: block;
 }
