--- a/src/components/profile/profile.css
+++ b/src/components/profile/profile.css
@@ -32,17 +32,17 @@
 .Text--Header h1 {
     margin: 0;
     padding: 0;
-    font-size: 2.4em;
+    font-size: 2.4rem;
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: -1px;
 }
 
 .Text-header h1::first-line {
-    font-size: 1.5em;
+    font-size: 1.5rem;
     letter-spacing: -4px;
     font-weight: 800;
-    line-height: 1.5em;
+    line-height: 1.5rem;
 }
 
 .Header--Text h1 span {
