--- a/src/style/common.css
+++ b/src/style/common.css
@@ -1,4 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800);
+@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
 
 @charset "utf-8";
 @-webkit-viewport   { width: device-width; }
@@ -7,17 +8,14 @@
 @-o-viewport        { width: device-width; }
 @viewport           { width: device-width; }
 
-body{
-    margin: 0 auto;
-    padding: 0;
-    font-size: var(--base-font-size);
-}
-
 :root {
-    --base-font-famiy: 'Open Sans', Arial, Tahoma;
+    --base-font-famiy: 'Roboto', sans-serif;
     --base-font-weight: 400;
     --base-background-colour: #ededed;
     --base-font-size: 10px;
+
+    --default-font-size: 1.4rem;
+    --default-line-heigh: 2rem;
     
     --base-pad: 1rem;
 
@@ -29,47 +27,38 @@ body{
     --font-colour: #363636;
     --base-colour: #ec7263;
 
+    --tablet-breakpoint: 1024px;
+    --mobile-breakpoint: 800px;
+
+    --max-size: 120rem;
+}
+
+body {
+    margin: 0 auto;
+    padding: 0;
+    max-width: var(--max-size);
+}
+
+html {
+    font-size: var(--base-font-size);
     color: var(--font-colour);
     font-weight: var(--base-font-weight);
     font-size: var(--base-font-size);
     font-family: var(--base-font-famiy);
-
+    
     background-color: var(--base-background-colour);
-
-    --tablet-breakpoint: 1024px;
-    --mobile-breakpoint: 800px;
-}
-
-a {
-    text-decoration: none;
-}
-
-p {
-    font-size: 1.3rem;
-}
-
-h2 {
-    color: #EC7263;
-    font-size: 1.8em;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-h2:before{
-    content: '//';
-    margin-right: 5px;
 }
 
 .Container--Large {
-    max-width: 115rem;
+    max-width: 115rrem;
 }
 
 .Container--Standard {
-    max-width: 100rem;
+    max-width: 100rrem;
 }
 
 .Container--Small {
-    max-width: 90rem;
+    max-width: 90rrem;
 }
 
 .Align--Center {
@@ -82,22 +71,56 @@ h2:before{
     margin: 0 auto;
 }
 
-/** **/
-
 .Block {
-
 }
 
 .Block:after {
     width: 100%;
-    height: 0.3rem;
+    height: 0.3rrem;
     background: #ddd;
     opacity: 0.5;
-    margin-top: 1.5rem;
+    margin-top: 1.5rrem;
     content: '';
     display: block;
 }
 
 .Clearfix {
     clear: both;
+}
+
+/** **/
+
+h1 {
+    font-size: var(--header-1);
+}
+
+h2 {
+    color: #EC7263;
+    font-size: var(--header-2);
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+h2:before{
+    content: '//';
+    margin-right: 5px;
+}
+
+h3 {
+    font-size: var(--header-3);
+}
+
+h4 {
+    font-size: var(--header-4);
+}
+
+/** **/
+
+a {
+    text-decoration: none;
+}
+
+p {
+    font-size: 1.4rem;
+    line-height: var(--default-line-heigh);
 }
