--- a/src/components/experiance/experiance.css
+++ b/src/components/experiance/experiance.css
@@ -5,16 +5,16 @@
 }
 
 .Experiance {
-    margin-top: var(--section-top-margin);
     position: relative;
     padding: 1em 0;
     display: flex;  
     flex-direction: row;
+    min-height: 14rem;
 }
 
 .Experiance:before {
     width: 0.5rem;
-    height: 60%;
+    height: 40%;
     top: 70px;
     position: absolute;
     left: 2.45rem;
