--- a/src/components/skillz/skillz.css
+++ b/src/components/skillz/skillz.css
@@ -13,7 +13,7 @@
     margin-bottom: 0.5rem;
     overflow: hidden;
     text-overflow: ellipsis;
-    font-size: 1.3em;
+    font-size: 1.2em;
     font-weight: 600;
 }
   
@@ -25,7 +25,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     font-weight: 600;
-    font-size: 1em;
+    font-size: 1.4em;
     border:1px solid #e6e6e6;
     border-top:none;
 }
@@ -34,6 +34,7 @@
     display: inline-block;
     background: #e6e6e6;
     padding: 0.5rem;
+    font-size: 1.2rem;
     margin-right: 0.5rem;
     margin-bottom: 0.5rem;
 }
