--- a/src/containers/home/home.css
+++ b/src/containers/home/home.css
@@ -10,13 +10,13 @@
 .Description {
     order: 1;
     flex: 2;
-    padding: 1rem 1rem 1rem 1.5rem;
+    padding: 0 1rem 1rem 1.5rem;
 }
 
 .Breakdown {
     order: 2;
     flex: 1;
-    padding: 1rem;
+    padding: 0 1rem 0 1rem;
 }
   
 @media (max-width: 1190px) {
