--- a/src/web/containers/blog/blog.css
+++ b/src/web/containers/blog/blog.css
@@ -1,72 +1,28 @@
-.Image {
-    width: 33%;
-}
-
-.Content {
-    display: flex;  
-    flex-direction: row;
-}
-
-.Description {
+.InnerContainer {
     order: 1;
     flex: 2;
     padding: 0 1rem 1rem 1.5rem;
 }
 
-.Breakdown {
-    order: 2;
-    flex: 1;
-    padding: 0 1rem 0 1rem;
-}
-  
-@media (max-width: 1190px) {
-    .Header--Container {
-        margin-left: 2rem;
-        margin-right: 2rem;
-    }
+.Entry--Container {
+    padding-bottom: 5rem;
+    margin-bottom: 5rem;
+    border-bottom: 3px solid #ededed;
 }
 
-@media (max-width: 1024px) {
+.Entry--Header {
+    color: #EC7263;
+    margin-bottom: 4rem;
+}
 
-    .Header--Container {
-        margin-top: 6rem;
-        margin-left: 2rem;
-        margin-right: 2rem;
-    }
-
-    .Photo {
-        width: 10rem;
-        height: 10rem;
-        margin-top: -5rem;
-    }
-
-    .Photo img {
-        width: 10rem;
-        height: 10rem;
-    }
-
-    .Image {
-        width: 50%;
-    }
-
-    .Description {
-        flex: 3;
-    }
-    
-    .Breakdown {
-        flex: 2;
-    }
+.Entry--Body {
 
 }
 
-@media (max-width: 850px) {
-
-    .Content {  
-        flex-direction: column;
-    }
-
-    .Image {
-        width: 100%;
-    }
-
+.Block--Code {
+    background: #eeeeee;
+    border: #dddddd 1px solid;
+    border-radius: 5px;
+    padding: 10px;
 }
+
