--- a/src/web/components/contact/contact.css
+++ b/src/web/components/contact/contact.css
@@ -10,31 +10,15 @@
 }
 
 .ContactItem--Icon {
-    padding: 1rem;
+    padding: 0.5rem;
     border-right: 1px solid #aaa;
     opacity: 0.3;
-    width: 2rem;
+    width: 50px;
+    height: 50px;
 }
 
-.ContactItem .fa {
-    font-size: 2rem;
-}
-
-.ContactItem--Title{
-    flex: 8;
-    padding: 1rem;
+.ContactItem--Title {
+    padding: 2rem;
     font-size: 1.5rem;
-    font-weight: 700;
-    opacity: 0.9;
-}
-
-.ContactItem--Title--Only{
-    margin-top: 10px;
-}
-
-.ContactItem--Description{
-    width: 80%;
-    width: calc(100% - 55px);
-    font-size: 1.2rem;
-    opacity: 0.7;
+    font-weight: 400;
 }
