--- a/src/web/style/common.css
+++ b/src/web/style/common.css
@@ -75,8 +75,9 @@ html {
 }
 
 .Block {
-    border-bottom: 2px solid var(--base-background-colour);
-    margin-bottom: 2rem;
+    border-bottom: 1px solid var(--base-background-colour);
+    padding-bottom: 2rem;
+    padding-top: 2rem;
 }
 
 .Block:after {
