--- a/src/web/style/common.css
+++ b/src/web/style/common.css
@@ -14,8 +14,8 @@
     --base-background-colour: #ededed;
     --base-font-size: 10px;
 
-    --default-font-size: 1.4rem;
-    --default-line-heigh: 2rem;
+    --default-font-size: 1.5rem;
+    --default-line-heigh: 2.4rem;
     
     --base-pad: 1rem;
  
@@ -25,7 +25,7 @@
     --header-4: 1.3rem;
 
     --font-colour: #363636;
-    --base-colour: #ec7263;
+    --base-colour: #F0563D;
 
     --tablet-breakpoint: 1024px;
     --mobile-breakpoint: 800px;
@@ -76,18 +76,7 @@ html {
 
 .Block {
     border-bottom: 1px solid var(--base-background-colour);
-    padding-bottom: 2rem;
-    padding-top: 2rem;
-}
-
-.Block:after {
-    width: 100%;
-    height: 0.3rrem;
-    background: #ddd;
-    opacity: 0.5;
-    margin-top: 1.5rrem;
-    content: '';
-    display: block;
+    padding: 2rem;
 }
 
 .Clearfix {
@@ -101,7 +90,7 @@ h1 {
 }
 
 h2 {
-    color: #EC7263;
+    color: var(--base-colour);
     font-size: var(--header-2);
     font-weight: 700;
     text-transform: uppercase;
@@ -124,15 +113,10 @@ h4 {
 
 a {
     text-decoration: none;
+    color: var(--font-colour);
 }
 
 p {
-    font-size: 1.4rem;
+    font-size: var(--default-font-size);
     line-height: var(--default-line-heigh);
-}
-
-
-
-.Navigation {
-    position: ;
 }
