--- a/ui/src/web/containers/blog/blog.css
+++ b/ui/src/web/containers/blog/blog.css
@@ -1,7 +1,7 @@
 .InnerContainer {
     display: flex;
+    flex-direction: column;
     order: 1;
-    flex: 2;
     padding: 0 1rem 1rem 1.5rem;
 }
 
