--- a/src/web/style/common.css
+++ b/src/web/style/common.css
@@ -1,4 +1,4 @@
-@import url('http://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800');
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900');
 
 @charset "utf-8";
