--- a/src/web/components/codeBlock/codeBlock.css
+++ b/src/web/components/codeBlock/codeBlock.css
@@ -1,6 +1,6 @@
 .Block--Code {
-    background: #eeeeee;
-    border: #dddddd 1px solid;
-    border-radius: 5px;
-    padding: 10px;
+  padding: 10px;
+  border: #ddd 1px solid;
+  border-radius: 5px;
+  background: #eee;
 }
