--- a/src/web/components/contact/contact.css
+++ b/src/web/components/contact/contact.css
@@ -1,24 +1,24 @@
 .ContactItem {
-    width: 100%;
-    display: flex;
-    border: 1px solid #e6e6e6;
-    border-bottom: none
+  width: 100%;
+  display: flex;
+  border: 1px solid #e6e6e6;
+  border-bottom: none;
 }
 
 .ContactItem:last-child {
-    border: 1px solid #e6e6e6;
+  border: 1px solid #e6e6e6;
 }
 
 .ContactItem--Icon {
-    padding: 0.5rem;
-    border-right: 1px solid #aaa;
-    opacity: 0.3;
-    width: 50px;
-    height: 50px;
+  width: 50px;
+  height: 50px;
+  padding: .5rem;
+  border-right: 1px solid #aaa;
+  opacity: .3;
 }
 
 .ContactItem--Title {
-    padding: 2rem;
-    font-size: 1.5rem;
-    font-weight: 400;
+  padding: 2rem;
+  font-size: 1.5rem;
+  font-weight: 400;
 }
