--- a/src/web/components/experiance/experiance.css
+++ b/src/web/components/experiance/experiance.css
@@ -1,85 +1,84 @@
 @import "../../style/common.css";
 
-:root{
-    --section-top-margin: 2rem;
+:root {
+  --section-top-margin: 2rem;
 }
 
 .Experiance {
-    position: relative;
-    padding: 0 0 1em 0;
-    display: flex;  
-    flex-direction: row;
+  position: relative;
+  padding: 0 0 1em;
+  display: flex;
+  flex-direction: row;
 }
 
-.Experiance:before {
-    width: 0.5rem;
-    height: 40%;
-    top: 70px;
-    position: absolute;
-    left: 2.45rem;
-    content: ' ';
-    display: block;
+.Experiance::before {
+  content: " ";
+  position: absolute;
+  top: 70px;
+  left: 2.45rem;
+  display: block;
+  width: .5rem;
+  height: 40%;
 }
 
 .Experiance--Year {
-    background: #fff;
-    padding: 1rem;
-    font-size: 1.5em;
-    font-weight: 700;
-    order: 1;
-    flex: 1;
+  flex: 1;
+  order: 1;
+  padding: 1rem;
+  background: #fff;
+  font-size: 1.5em;
+  font-weight: 700;
 }
 
 .Experiance--Date {
-    opacity: 0.6;
+  opacity: .6;
 }
 
 .Experiance--Description {
-    background: #eee;
-    margin-bottom: 1rem;
-    position: relative;
-    padding: 1rem 1rem 0 1rem;
-    border-bottom: 1px solid #ddd;
-    order: 2;
-    flex: 6;
+  position: relative;
+  flex: 6;
+  order: 2;
+  padding: 1rem 1rem 0;
+  margin-bottom: 1rem;
+  border-bottom: 1px solid #ddd;
+  background: #eee;
 }
 
-.Experiance--Description:after {
-    content: '';
-    position: absolute;
-    top: 3rem;
-    right: 0;
-    left: -1.5rem;
-    height: 0;
-    width: 0;
-    border: solid transparent;
-    border-right-color: #eee;
-    border-width: 1rem;
-    pointer-events: none;
+.Experiance--Description::after {
+  content: "";
+  position: absolute;
+  top: 3rem;
+  right: 0;
+  left: -1.5rem;
+  height: 0;
+  width: 0;
+  border: solid transparent;
+  border-right-color: #eee;
+  border-width: 1rem;
+  pointer-events: none;
 }
 
 .Experiance--Description h3 {
-    margin: 0;
-    padding: 0.5rem 0;
-    font-weight: 700;
+  margin: 0;
+  padding: .5rem 0;
+  font-weight: 700;
 }
 
 .Experiance--Description p {
-    margin-top: 0.5rem;
-    padding: 0;
+  margin-top: .5rem;
+  padding: 0;
 }
 
 @media (max-width: 850px) {
+  .Experiance {
+    flex-direction: column;
+  }
 
-    .Experiance {  
-        flex-direction: column;
-    }
+  .Experiance--Year {
+    flex: 1;
+  }
 
-    .Experiance--Year {
-        flex: 1;
-    }
-    
-    .Experiance--Description{
-        flex: 9;
-    }   
+  .Experiance--Description {
+    flex: 9;
+  }
 }
