--- a/src/web/components/folio/folio.css
+++ b/src/web/components/folio/folio.css
@@ -1,48 +1,46 @@
 .Folio {
-    display: flex;  
-    flex-direction: row;
-    flex-wrap: wrap;
-    position: relative;
-    margin-bottom: 1rem;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  margin-bottom: 1rem;
 }
 
 .Folio--Image img {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .Folio--Overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .Folio--Overlay:hover {
-    opacity: 0.7;
-    background-color: #000000;
-    transition: background-color 200ms linear;
+  background-color: #000;
+  opacity: .7;
+  transition: background-color 200ms linear;
 }
 
 .Folio--Overlay--Header {
-   text-align: center;
-   padding: 1rem;
-   background: #000000;
-   color: #ffffff;
-   font-size: 1.5rem;
-   font-weight: bold;
+  padding: 1rem;
+  background: #000;
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
 }
 
 @media (max-width: 850px) {
+  .Folio {
+    flex-direction: column;
+  }
 
-    .Folio {
-        flex-direction: column;
-    }
-
-    .Folio--Image {
-        width: 100%;
-    }
-
+  .Folio--Image {
+    width: 100%;
+  }
 }
