--- a/src/web/containers/blogPage/blogPage.css
+++ b/src/web/containers/blogPage/blogPage.css
@@ -1,19 +1,19 @@
 .InnerContainer {
-    display: flex;
-    flex-direction: column;
-    order: 1;
-    padding: 0 1rem 1rem 1.5rem;
+  display: flex;
+  flex-direction: column;
+  order: 1;
+  padding: 0 1rem 1rem 1.5rem;
 }
 
 .Entry--Container {
-    padding-bottom: 5rem;
-    margin-bottom: 5rem;
-    border-bottom: 3px solid #ededed;
+  padding-bottom: 5rem;
+  margin-bottom: 5rem;
+  border-bottom: 3px solid #ededed;
 }
 
 .Entry--Header {
-    color: #EC7263;
-    margin-bottom: 4rem;
+  margin-bottom: 4rem;
+  color: #ec7263;
 }
 
 .Entry--Body {
@@ -21,35 +21,34 @@
 }
 
 .Block--Code {
-    background: #eeeeee;
-    border: #dddddd 1px solid;
-    border-radius: 5px;
-    padding: 10px;
+  padding: 10px;
+  border: #ddd 1px solid;
+  border-radius: 5px;
+  background: #eee;
 }
 
 .Bold {
-    font-weight: bold;
-    padding: 0.5rem 0;
-
+  padding: .5rem 0;
+  font-weight: bold;
 }
 
 .Code {
-    background: var(--base-background-colour);
-    padding: 1rem;
-    font-weight: bold;
-    font-family: 'Times New Roman', Times, serif;
-    font-size:1.5rem
+  padding: 1rem;
+  background: var(--base-background-colour);
+  font-family: "Times New Roman", Times, serif;
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
 .Text {
-    padding: 0.5rem 0;
+  padding: .5rem 0;
 }
 
 .ImageContainer {
-    text-align: center;
+  text-align: center;
 }
 
 .ImageContainer--Image {
-    max-height: 30rem;
-    max-width: 100%;
+  max-height: 30rem;
+  max-width: 100%;
 }
