--- a/src/web/style/tailwind.css
+++ b/src/web/style/tailwind.css
@@ -14,6 +14,7 @@
   src: url('https://devnotnull-ui-production.s3.eu-west-2.amazonaws.com/media/Harman-Sans.woff2') format('opentype');
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @layer base {
